--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">ApplicationCuaToi</string>
     <string name="title_activity_home">MainActivity</string>
-    <string name="title_home">Favorite Movie</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_home">Top Popular</string>
     <string name="title_notifications">Information</string>
 </resources>
