thêm vuốt trái để chọn option cho recycleView tại màn hình infomation user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_notifications">Information</string>
     <string name="facebook_app_id">287335279457042</string>
     <string name="fb_login_protocol_scheme">fb287335279457042</string>
+    <string name="please_await">Please await...</string>
 
 </resources>
